# ArbX

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
config/: bybit.yaml  contracts.yaml  default.yaml  ewma_spread.yaml  funding_rate.yaml  okx.yaml  testnet.yaml  triangular.yaml
deploy/containers/: README.md  arbx-core.Containerfile  build.sh  sidecar-fubon.Containerfile  sidecar-shioaji.Containerfile
deploy/systemd/: aeron-driver.service  arbx-core.service  arbx-sidecar-fubon.service  arbx-sidecar-shioaji.service
deploy/vault/: seed-secrets.sh  vault-config.hcl  vault-init.sh
docker/aeron/: Dockerfile  README.md  docker-compose.yml
docker/arbx-core/: Containerfile
docker/observability/: README.md  docker-compose.yml  prometheus.yml
docker/observability/grafana/dashboards/: arbx.json
docker/observability/grafana/provisioning/dashboards/: default.yml
docker/sidecar-fubon/: Containerfile
docker/sidecar-shioaji/: Containerfile
observability/grafana/: arbx-overview.json
python-sidecar/: pyproject.toml
python-sidecar/config/: fubon.yaml  shioaji.yaml  signals.yaml
python-sidecar/scripts/: install-fubon.sh
python-sidecar/src/: config.py  main.py
python-sidecar/src/adapters/: __init__.py  base.py  fubon_adapter.py  mock_adapter.py  rate_limiter.py  shioaji_adapter.py
python-sidecar/src/ipc/: aeron_client.py  flatbuf_codec.py
python-sidecar/src/models/: __init__.py  messages.py
python-sidecar/src/secrets/: vault_client.py
python-sidecar/src/signals/: base.py  cryptopanic.py  cryptoquant.py  encode.py  fred.py
python-sidecar/tests/: test_flatbuf_codec.py  test_mock_adapter.py
rust-core/: Cargo.toml
rust-core/benches/: critical_path.rs
rust-core/proptest-regressions/ipc/: flatbuf_codec.txt
rust-core/src/: lib.rs  main.rs  metrics.rs
rust-core/src/adapters/: aeron_feed.rs  fee_provider.rs  market_data.rs  mock_exchange.rs  mod.rs  order_executor.rs  paper_executor.rs  position_manager.rs  private_stream.rs  rate_limiter.rs  rest_client.rs
rust-core/src/adapters/binance/: fee_provider.rs  market_data.rs  mod.rs  order_executor.rs  position_manager.rs  private_stream.rs  rest_client.rs
rust-core/src/adapters/bybit/: fee_provider.rs  market_data.rs  order_executor.rs  position_manager.rs  private_stream.rs  rest_client.rs
rust-core/src/adapters/okx/: fee_provider.rs  market_data.rs  mod.rs  order_executor.rs  position_manager.rs  private_stream.rs  rest_client.rs
rust-core/src/backtest/: data_feed.rs  engine.rs  mod.rs  report.rs
rust-core/src/config/: mod.rs
rust-core/src/engine/: admin.rs  arbitrage.rs  cert_watchdog.rs  clock.rs  event_bus.rs  execution.rs  mod.rs  signal.rs  watchdog.rs
rust-core/src/ipc/: aeron.rs  flatbuf_codec.rs  mod.rs
rust-core/src/models/: enums.rs  fee.rs  instrument.rs  instrument_index.rs  instrument_provider.rs  market.rs  mod.rs  order.rs  position.rs  tick_rules.rs  trade_log.rs
rust-core/src/risk/: circuit_breaker.rs  limits.rs  manager.rs  mod.rs  state.rs  strategy_budget.rs
rust-core/src/strategy/: base.rs  cross_exchange.rs  cross_venue_funding.rs  ewma_spread.rs  funding_rate.rs  mod.rs  multi_pair_cross_exchange.rs  signal_momentum.rs  triangular_arb.rs  tw_etf_futures.rs
rust-core/tests/: aeron_ipc_roundtrip.rs  aeron_loopback_feed.rs  backtest_smoke.rs  binance_testnet_smoke.rs  example_configs_load.rs  flatbuf_python_compat.rs  integration_test.rs
rust-core/tests/fixtures/: backtest_quotes.jsonl
schemas/: README.md  messages.fbs
scripts/: smoke-test.sh
tools/: gen_flatbuf_fixtures.py
