[project]
name = "arbx-sidecar"
version = "0.1.0"
description = "Python sidecar for ArbX — bridges TW stock SDKs to Rust engine via Aeron IPC"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "flatbuffers>=25",
    "pydantic>=2.12",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
tw-stock = [
    "shioaji>=1.3",
]
crypto = [
    "ccxt>=4.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]
