[package]
name = "arbx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
async-trait = "0.1"
anyhow = "1"
futures-util = "0.3.32"
smallvec = { version = "1.15.1", features = ["serde"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2"
url = "2.5.8"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
governor = "0.8"
serde_yaml = "0.9"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
clap = { version = "4", features = ["derive"] }
flatbuffers = "25"
rusteron-client = "0.1"
rustc-hash = "2"
arrayvec = "0.7"
core_affinity = "0.8"
axum = "0.8"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "arbx_tui"
required-features = ["tui"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "critical_path"
harness = false
